update the file name

--- a/inventory-mgm.yml
+++ b/inventory-mgm.yml
@@ -4,5 +4,11 @@ spring:
     username: system
     password: tiger
   jpa:
-    show-sql:true
-    generate-ddl:false
+    show-sql: true
+    generate-ddl: false
+  application:
+    name: inventory-mgm
+
+server:
+  port: 8081
+  
